fixed title clipping bug

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Amiri");
 .Home {
-  padding-top: 10%; }
+  padding-top: 8%; }
 
 .home-body {
   width: 100%; }
@@ -130,7 +130,7 @@
   width: 33%;
   font-family: "Amiri";
   white-space: nowrap;
-  transition: width 2s ease-in-out 0s, opacity 1s ease-in-out 1s; }
+  transition: width 2s ease-in-out 0s, opacity 1s ease-in-out 1.5s; }
 
 .nav-title2 {
   transition: all 2s ease-in-out 0s, opacity .5s ease-in-out, visibility .5s ease-in-out 2s !important;
