--- a/src/styles/_Home.scss
+++ b/src/styles/_Home.scss
@@ -1,6 +1,6 @@
 
 .Home {
-    padding-top: 10%;
+    padding-top: 8%;
 }
 
 .home-body {
