--- a/src/styles/_Nav.scss
+++ b/src/styles/_Nav.scss
@@ -110,7 +110,7 @@
     width: 33%;
     font-family: "Amiri"; 
     white-space: nowrap;
-    transition: width 2s ease-in-out 0s, opacity 1s ease-in-out 1s;
+    transition: width 2s ease-in-out 0s, opacity 1s ease-in-out 1.5s;
 }
 
 .nav-title2 {
